# typed-lambda-calculus

./: Cargo.toml  README.md
examples/: multiline.tlc
src/: compiler.rs  eval.rs  intern.rs  main.rs  parser.rs  repl.rs  tests.rs  typing.rs  vm.rs
src/snapshots/: typed_lambda_calculus__tests__infer_apply_lambda_add.snap  typed_lambda_calculus__tests__infer_apply_lambda_add.snap.new  typed_lambda_calculus__tests__infer_bool.snap  typed_lambda_calculus__tests__infer_identity.snap  typed_lambda_calculus__tests__infer_lambda_add.snap  typed_lambda_calculus__tests__infer_lambda_add.snap.new  typed_lambda_calculus__tests__infer_lambda_add_apply.snap.new  typed_lambda_calculus__tests__infer_lambda_add_vars.snap  typed_lambda_calculus__tests__infer_lambda_apply.snap  typed_lambda_calculus__tests__infer_lambda_apply.snap.new  typed_lambda_calculus__tests__infer_lambda_id.snap  typed_lambda_calculus__tests__infer_let.snap.new  typed_lambda_calculus__tests__parse_let.snap  typed_lambda_calculus__tests__parse_multiline_apply.snap
src/vm/: chunk.rs  mod.rs  opcode.rs  value.rs
src/vm/snapshots/: rlox__vm__chunk__tests__const.snap  rlox__vm__chunk__tests__neg.snap  rlox__vm__chunk__tests__ret.snap
