[package]
name = "typed-lambda-calculus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "1.0.0-alpha.4"
env_logger = "0.10.0"
insta = "1.29.0"
lasso = { version = "0.6.0", features = ["multi-threaded"] }
log = "0.4.18"
logos = "0.13.0"
once_cell = "1.17.1"
regex = "1.7.1"
rustyline = { version = "11.0.0", features = ["derive"] }
